# encode-task-impedance-from-demonstration

./: .gitignore  README.md
dynamic_time_warping/: DynamicTimeWarping.ipynb  DynamicTimeWarping.md  README.md
gmr/: README.md  data.csv  data.npy  generate_data.py  gmr_test.py
parameter_estimation/: ParameterEstimation.ipynb  README.md
parameter_estimation/.ipynb_checkpoints/: ParameterEstimation-checkpoint.ipynb
resources/: README.md
resources/admittance_control/: data_for_plotting_admittance_control.npy
resources/demo_data/: Thu May  5 17:37:48 2022.npy  Thu May  5 17:42:48 2022.npy  no_weight.npy  weight_1.npy  weight_1_v2.npy  weight_3.npy
resources/kf_data/: 3_force.npy  no_force.npy
resources/parameters/: README.md
resources/training_data/: 3 - Copy.npy
simulation/: README.md
simulation/scripts/: UR3_definitions_movementExample.lua
src/: README.md  gui_training.py  offline_pipeline.py
src/admittanceControl/: README.md  admittanceControl.py  main.py  requirements.txt  utilities.py
src/controller_py/: README.md  package.xml  setup.cfg  setup.py
src/custom_msg_srv/: CMakeLists.txt  package.xml
src/custom_msg_srv/srv/: SensorCall.srv
src/custom_msgs_srvs/: package.xml  setup.cfg  setup.py
src/custom_msgs_srvs/srv/: SensorCall.srv
src/dataHandling/: README.md  combineData.py  data_utilities.py  deleteLastIteration.py
src/dynamic_time_warping/: DTWz.py  DynamicTimeWarping.ipynb  README.md
src/gmm_gmr/: GMM GMR test.ipynb
src/gmr/: README.md  data.csv  fy_GMM  fz_GMM  gaussian_mixture_regression.py  generate_fake_data.py  gmm_offline_pipeline_example.ipynb  gmr_online_pipeline_example.ipynb  handle_data.py  handle_fake_data.py  pbd_gmr_test.py  real_data_handler.py  timed_GMM  zumo_data_handler.py
src/managementGUI/: gui_training.py
src/offline_controller/: README.md  (+2 more)
(+140 files in other folders)
